tests/fixtures/invalid/pow_none_dict_none.py
# Cannot call pow() with None, Dict[str, int], None
x = pow(None, {"a": 1}, None)
